[tool.poetry]
name = "oda"
version = "0.1.0"
description = ""
authors = ["Tomas <tomasgonz@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.14.0"
pandas = "^1.5.1"
numpy = "^1.23.4"
plotly = "^5.10.0"
paises = ">=0.2"
requests = "^2.28.1"
tqdm = "^4.64.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
